Prep for release 0.9.4

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.9.4 (July 29, 2012)
+-----------------------------
+- Fix VNC keygrab issues
+
 Release 0.9.3 (July 09, 2012)
 -----------------------------
 - Fix broken release tar.gz of version 0.9.2
