change Mbps to MB/s in migration dialog
(crobinso: add Joey to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -81,6 +81,7 @@ Further patches have been submitted by:
     Nathan Bird <nathan-at-acceleration-dot-net>
     Guannan Ren <gren-at-redhat-dot-com>
     Eduardo Elias Ferreira <edusf-at-linux-dot-vnet-dot-ibm-dot-com>
+    Joey Boggs <jboggs-at-redhat-dot-com>
 
     <...send a patch & get your name here...>
 
