--- a/po/hi.po
+++ b/po/hi.po
@@ -4828,8 +4828,8 @@ msgid "ms"
 msgstr "ms"
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
-msgstr "Mbps"
+msgid "MB/s"
+msgstr "MB/s"
 
 #: ../src/vmm-migrate.ui.h:12
 msgid "_Bandwidth:"
