--- a/po/kn.po
+++ b/po/kn.po
@@ -4784,8 +4784,8 @@ msgid "ms"
 msgstr ""
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
-msgstr "Mbps"
+msgid "MB/s"
+msgstr "MB/s"
 
 #: ../src/vmm-migrate.ui.h:12
 msgid "_Bandwidth:"
