--- a/po/ru.po
+++ b/po/ru.po
@@ -4836,7 +4836,7 @@ msgid "ms"
 msgstr "мс"
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
+msgid "MB/s"
 msgstr "Мбит/с"
 
 #: ../src/vmm-migrate.ui.h:12
