--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -4795,7 +4795,7 @@ msgid "ms"
 msgstr ""
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
+msgid "MB/s"
 msgstr "মেগাবাইট/সেকেন্ড"
 
 #: ../src/vmm-migrate.ui.h:12
