--- a/po/nl.po
+++ b/po/nl.po
@@ -4868,8 +4868,8 @@ msgid "ms"
 msgstr "ms"
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
-msgstr "Mbps"
+msgid "MB/s"
+msgstr "MB/s"
 
 #: ../src/vmm-migrate.ui.h:12
 msgid "_Bandwidth:"
