--- a/po/pa.po
+++ b/po/pa.po
@@ -4778,8 +4778,8 @@ msgid "ms"
 msgstr "ms"
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
-msgstr "Mbps"
+msgid "MB/s"
+msgstr "MB/s"
 
 #: ../src/vmm-migrate.ui.h:12
 msgid "_Bandwidth:"
