--- a/po/pl.po
+++ b/po/pl.po
@@ -4916,7 +4916,7 @@ msgid "ms"
 msgstr "ms"
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
+msgid "MB/s"
 msgstr "Mb/s"
 
 #: ../src/vmm-migrate.ui.h:12
