--- a/po/sk.po
+++ b/po/sk.po
@@ -4656,7 +4656,7 @@ msgid "ms"
 msgstr ""
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
+msgid "MB/s"
 msgstr "Mb/s"
 
 #: ../src/vmm-migrate.ui.h:12
