--- a/po/sv.po
+++ b/po/sv.po
@@ -4843,7 +4843,7 @@ msgid "ms"
 msgstr "ms"
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
+msgid "MB/s"
 msgstr "Mb/s"
 
 #: ../src/vmm-migrate.ui.h:12
