--- a/po/ta.po
+++ b/po/ta.po
@@ -4761,8 +4761,8 @@ msgid "ms"
 msgstr ""
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
-msgstr "Mbps"
+msgid "MB/s"
+msgstr "MB/s"
 
 #: ../src/vmm-migrate.ui.h:12
 msgid "_Bandwidth:"
