--- a/po/uk.po
+++ b/po/uk.po
@@ -4929,7 +4929,7 @@ msgid "ms"
 msgstr "мс"
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
+msgid "MB/s"
 msgstr "Мбіт/с"
 
 #: ../src/vmm-migrate.ui.h:12
