--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4730,8 +4730,8 @@ msgid "ms"
 msgstr ""
 
 #: ../src/vmm-migrate.ui.h:9
-msgid "Mbps"
-msgstr "Mbps"
+msgid "MB/s"
+msgstr "MB/s"
 
 #: ../src/vmm-migrate.ui.h:12
 msgid "_Bandwidth:"
