Edit description using SetMetadata when available
Since 0.9.10 libvirt supports editing a domain's metadata using the
SetMetadata API. Using that API the description of a domain can be
edited as it is running.

Make virt-manager edit the description of a domain using SetMetadata
when available.

(crobinso: Add Markus to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -82,6 +82,7 @@ Further patches have been submitted by:
     Guannan Ren <gren-at-redhat-dot-com>
     Eduardo Elias Ferreira <edusf-at-linux-dot-vnet-dot-ibm-dot-com>
     Joey Boggs <jboggs-at-redhat-dot-com>
+    Marcus Karlsson <mk-at-acc.umu.se>
 
     <...send a patch & get your name here...>
 
