--- a/AUTHORS
+++ b/AUTHORS
@@ -83,6 +83,7 @@ Further patches have been submitted by:
     Eduardo Elias Ferreira <edusf-at-linux-dot-vnet-dot-ibm-dot-com>
     Joey Boggs <jboggs-at-redhat-dot-com>
     Marcus Karlsson <mk-at-acc.umu.se>
+    Michal Privoznik <mprivozn-at-redhat-dot-com>
 
     <...send a patch & get your name here...>
 
