Make deleting storage files default with added prompt
This patch changes the default checkbox-state of "Delete all
associated storage" to be checked, but adds a prompt with a warning
for users to be sure they notice this change and they know what they
are doing (hopefully).

(crobinso: confirm even if no gconf schema available, cosmetic spacing
 fixup, add Martin to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -84,6 +84,7 @@ Further patches have been submitted by:
     Joey Boggs <jboggs-at-redhat-dot-com>
     Marcus Karlsson <mk-at-acc.umu.se>
     Michal Privoznik <mprivozn-at-redhat-dot-com>
+    Martin Kletzander <mkletzan-at-redhat-dot-com>
 
     <...send a patch & get your name here...>
 
