Add virtio-scsi disk bus option
This patch will add virtio-scsi bus option on "Add New Virtual
Hardware" GUI page. It will support users to add a virtual disk
using SCSI bus with a controller model virtio-scsi.
If there is no SCSI controller existed, a new SCSI controller by
model 'virtio-scsi' will be added automatically.

Signed-off-by: ChenHanxiao <chenhanxiao@cn.fujitsu.com>

(crobinso: add Chen to AUTHORS, some cosmetic tweaks)

--- a/AUTHORS
+++ b/AUTHORS
@@ -85,6 +85,7 @@ Further patches have been submitted by:
     Marcus Karlsson <mk-at-acc.umu.se>
     Michal Privoznik <mprivozn-at-redhat-dot-com>
     Martin Kletzander <mkletzan-at-redhat-dot-com>
+    ChenHanxiao <chenhanxiao-at-cn-dot-fujitsu-dot-com>
 
     <...send a patch & get your name here...>
 
