man: Mention that standard GTK args are also accepted.

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -74,6 +74,8 @@ on the host.
 
 =back
 
+Standard GTK options like --g-fatal-warnings are also accepted.
+
 =head1 AUTHOR
 
 Written by Daniel P. Berrange and Cole Robinson.
