virt-manager: add support for iotune
(crobinso: Add David to AUTHORS, pylint cleanups, enable for test driver)

--- a/AUTHORS
+++ b/AUTHORS
@@ -86,6 +86,7 @@ Further patches have been submitted by:
     Michal Privoznik <mprivozn-at-redhat-dot-com>
     Martin Kletzander <mkletzan-at-redhat-dot-com>
     ChenHanxiao <chenhanxiao-at-cn-dot-fujitsu-dot-com>
+    David Shane Holden <dpejesh@yahoo.com>
 
     <...send a patch & get your name here...>
 
