Strip whitespace from remote hostname
If users accidentally add whitespace to the beginning or end of a hostname their connection will fail, so strip it.

Fixes BZ 818438 - Whitespace in remote connection hostname field is not trimmed

(crobinso: Add Dave to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -87,6 +87,7 @@ Further patches have been submitted by:
     Martin Kletzander <mkletzan-at-redhat-dot-com>
     ChenHanxiao <chenhanxiao-at-cn-dot-fujitsu-dot-com>
     David Shane Holden <dpejesh@yahoo.com>
+    Dave Allan <dallan@redhat.com>
 
     <...send a patch & get your name here...>
 
