todo: Add entry about wiki-ifying the website

--- a/todo.txt
+++ b/todo.txt
@@ -20,7 +20,7 @@ is tui working? maybe just remove it, check with mcpierce
 gsettings port (or fix gconf bindings)
 gtkapplication + drop dbus uniqueness stuff? at least investigate it
 python3? consider it
-
+website: wiki-ify the whole thing, drop static content, move site styling into virt-manager.git, kill the old web repo. and get that old hideous screenshot off the front page. linux-kvm.org should be the template here.
 
 
   Misc issues
