Add a force reset item to all shutdown menus

--- a/AUTHORS
+++ b/AUTHORS
@@ -88,6 +88,7 @@ Further patches have been submitted by:
     ChenHanxiao <chenhanxiao-at-cn-dot-fujitsu-dot-com>
     David Shane Holden <dpejesh@yahoo.com>
     Dave Allan <dallan@redhat.com>
+    John Doyle <spdubhghaill@gmail.com>
 
     <...send a patch & get your name here...>
 
