Allow empty cpu model
If we specify cpu model and apply once, we could not specify empty
cpu model again with following error.
"Error changing VM configuration: internal error Non-empty feature
list specified without CPU model"
That is not useful to restore default cpu model.
This patch fixes above issue.

Signed-off-by: Ken ICHIKAWA <ichikawa.ken@jp.fujitsu.com>

(crobinso: minor cleanup, add Ken to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -89,6 +89,7 @@ Further patches have been submitted by:
     David Shane Holden <dpejesh@yahoo.com>
     Dave Allan <dallan@redhat.com>
     John Doyle <spdubhghaill@gmail.com>
+    Ken ICHIKAWA <ichikawa.ken@jp.fujitsu.com>
 
     <...send a patch & get your name here...>
 
