virt-install: don't fail on storage pools without targets.
(crobinso: Add Tom to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -157,6 +157,7 @@ Further patches have been submitted by:
     John Doyle <spdubhghaill@gmail.com>
     Giuseppe Scrivano <gscrivano@gnu.org>
     Ken ICHIKAWA <ichikawa.ken@jp.fujitsu.com>
+    Tom Lanyon <tom@oneshoeco.com>
 
     <...send a patch & get your name here...>
 
