Prep for release 0.9.5

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.9.5 (April 01, 2013)
+------------------------------
+- Enable adding virtio-scsi disks (Chen Hanxiao)
+- Support security auto-relabel setting (Martin Kletzander)
+- Support disk iotune settings (David Shane Holden)
+- Support 'reset' as a reboot option (John Doyle)
+- Bug fixes and minor improvements
+
 Release 0.9.4 (July 29, 2012)
 -----------------------------
 - Fix VNC keygrab issues
