migrate: use correct grammar
According to http://grammar.quickanddirtytips.com/a-while-awhile.aspx,
you can tell whether to use 'awhile' or 'a while' by substituting
'quietly' or 'a year' and seeing if the resulting sentence still makes
sense.  During migration, we used an adverb, but want the noun form.

* src/virtManager/migrate.py (vmmMigrateDialog.finish): Use
correct grammar.

(crobinso: Add Eric to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -158,6 +158,7 @@ Further patches have been submitted by:
     Giuseppe Scrivano <gscrivano@gnu.org>
     Ken ICHIKAWA <ichikawa.ken@jp.fujitsu.com>
     Tom Lanyon <tom@oneshoeco.com>
+    Eric Blake <eblake@redhat.com>
 
     <...send a patch & get your name here...>
 
