--- a/todo.txt
+++ b/todo.txt
@@ -71,6 +71,11 @@ virtinst initrd test: drop the big files? just stub em out
 setup.py rpm: drop hardcoding rpm version, specify it with rpmbuild
 setup.py rpm: dump output in sourcedir, or dist/
 
+INSTALL docs about python setup.py refresh_translations from virtinst,
+    or whatever the distutils extra equiv is. or update po/README,
+    or have a TRANSLATORS file, or update HACKING, etc. see what other
+    projects do.
+
 
   Problems in other packages
   ==========================
