Remove my name from all translation files, I didn't do anything

--- a/po/sk.po
+++ b/po/sk.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 19:35-0400\n"
 "PO-Revision-Date: 2012-08-14 08:17+0000\n"
-"Last-Translator: Cole Robinson <crobinso@redhat.com>\n"
+"Last-Translator: Peter Mráz <etkinator@gmail.com>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/virt-manager/"
 "language/sk/)\n"
 "Language: sk\n"
