--- a/po/nb.po
+++ b/po/nb.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 19:35-0400\n"
 "PO-Revision-Date: 2012-08-14 08:17+0000\n"
-"Last-Translator: Cole Robinson <crobinso@redhat.com>\n"
+"Last-Translator: Espen Stefansen <espenas@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
