--- a/po/pt.po
+++ b/po/pt.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-03 19:35-0400\n"
 "PO-Revision-Date: 2012-08-14 08:17+0000\n"
-"Last-Translator: Cole Robinson <crobinso@redhat.com>\n"
+"Last-Translator: <example@redhat.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
