Add support for cpu mode attribute and cpu host-passthrough
With this patch, users can use cpu host-passthrough like this:

  virt-install --cpu host-passthrough ...

Signed-off-by: Ken ICHIKAWA <ichikawa.ken@jp.fujitsu.com>
Signed-off-by: Hu Tao <hutao@cn.fujitsu.com>

(crobinso: Add Hu Tao to AUTHORS)

--- a/AUTHORS
+++ b/AUTHORS
@@ -160,6 +160,7 @@ Further patches have been submitted by:
     Tom Lanyon <tom@oneshoeco.com>
     Eric Blake <eblake@redhat.com>
     Gene Czarcinski <gene@czarc.net>
+    Hu Tao <hutao@cn.fujitsu.com>
 
     <...send a patch & get your name here...>
 
